--- a/baudrillard/index.html
+++ b/baudrillard/index.html
@@ -38,7 +38,7 @@
 				<img class="crowd_pic" src= "https://svg-clipart.com/clipart/cartoon/oqBm6lI-man-silhouette-clipart.png">
 
 
-				<img id="woman_pic" src ="https://lh3.googleusercontent.com/proxy/C9dSgUD52y3HGsbWzOnKG4QE-f40pDP5R5fVh9xbTTFnIzMbaAedjYtjDk1DWamJwqUY4DIdduTYk41_SOFJpz9lYHCds9uG9g" >
+				<img id="woman_pic" src ="https://www.pngkey.com/png/full/452-4527032_vintage-woman-clipart-woman-looking-in-mirror-drawing.png" >
 			</div>
 			<!-- <div id="woman"> -->
 				<!-- <img class="crowd_pic" src= "https://svg-clipart.com/clipart/cartoon/oqBm6lI-man-silhouette-clipart.png"> -->
