--- a/final/index.html
+++ b/final/index.html
@@ -5,21 +5,19 @@
         <title> Final </title>
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="theStyle.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 	<body>
         <h1>
             Welcome to the Cache Simulator!
         </h1>
+        <br><br><br><br>
         <div id="container">
-            <div class="text">
-                Please Select Amount of Caches 
-            </div>
-             <button onclick="document.location ='cache1.html'">
-                1 Cache
+             <button onclick="document.location ='tutorial.html'">
+                ?
             </button>
-            <button onclick="document.location ='cache2.html'">
-                2 Caches
+            <button onclick="document.location ='cache1.html'">
+                Start
             </button>
         </div>
 	</body>
