--- a/final/cache1.html
+++ b/final/cache1.html
@@ -5,10 +5,12 @@
         <title> Final </title>
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="theStyle.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
        <!--  <script src="scene.js" defer></script> -->
         <script src="calculations.js" defer></script>
         <script src="https://threejs.org/build/three.js"></script>
+        <script src='threex.dynamictexture.js'></script>
+
     </head>
 	<body>
         <div id="container">
@@ -71,6 +73,12 @@
             </div>
             <div class="text" id="printindex">
             </div>
+            <button onclick="document.location ='cache1.html'">
+                Reset
+            </button>
+            <button onclick="document.location ='index.html'">
+                Home
+            </button>
         </div>
 	</body>
 
